# volo

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREDITS.md  Cargo.lock~fix ci  Cargo.toml  LICENSE-MIT  README-ja.md  README-zh_cn.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  rust-toolchain.toml  rustfmt.toml
.github/: CODEOWNERS  (+2 more)
benchmark/: Cargo.toml  build.rs
benchmark/idl/: echo.thrift
benchmark/scripts/: bench.sh  build.sh  env.sh  util.sh
benchmark/scripts/reports/: diff.py  render_images.py  to_csv.sh
benchmark/src/: lib.rs
benchmark/src/perf/: cpu.rs  mem.rs  mod.rs
benchmark/src/runner/: counter.rs  mod.rs  processor.rs
examples/: Cargo.toml
examples/proto/: echo.proto  googleapis_beyondcorp_appgateways_v1.proto  hello.proto  nested.proto  streaming.proto
examples/src/: loadbalance_example.rs
examples/src/compression/: grpc_client.rs  grpc_server.rs
examples/src/graceful-shutdown/: grpc_server.rs
examples/src/grpc/compression/: client.rs  server.rs
examples/src/grpc/descriptor/: client.rs  server.rs
examples/src/grpc/dns/: client.rs  server.rs
examples/src/grpc/googleapis_beyondcorp_appgateways_v1/: client.rs  endpoint.rs  header.rs  rpc_provider.rs
examples/src/grpc/grpc-web/: client.rs  server.rs
examples/src/grpc/hello/: client.rs  server.rs
examples/src/grpc/loadbalance/: client.rs  server.rs
examples/src/grpc/multiplex/: client.rs  server.rs
examples/src/grpc/passthrough/: client.rs  service_a.rs  service_b.rs
examples/src/grpc/streaming/: client.rs  server.rs
examples/src/hello/: grpc_client.rs  grpc_server.rs  thrift_client.rs  thrift_server.rs  thrift_server_panic.rs
examples/src/hello_grpc_tls/: grpc_tls_client.rs  grpc_tls_server.rs
examples/src/http/: example-http-client.rs  example-http-server.rs  http-tls-client.rs  http-tls-server.rs  http.rs  simple.rs  state.rs
examples/src/loadbalance/: grpc_client.rs  grpc_server.rs
examples/src/multiplex/: grpc_client.rs  grpc_server.rs  thrift_client.rs  thrift_server.rs
examples/src/streaming/: grpc_client.rs  grpc_server.rs
examples/src/unknown/: thrift_client.rs  thrift_server.rs
examples/tests/: thrift_multi_service.rs
examples/thrift/: echo.thrift  echo_unknown.thrift  hello.thrift
examples/thrift_idl/: hello.thrift
examples/volo-gen/: Cargo.toml  build.rs  volo.yml
examples/volo-gen/src/: lib.rs
tests/code-generation-workspace-split/: .gitignore  Cargo.toml  volo.workspace.yml
tests/code-generation-workspace-split/common/: Cargo.toml
tests/code-generation-workspace-split/rpc_article/: Cargo.toml
tests/code-generation-workspace-split/rpc_author/: Cargo.toml
tests/code-generation-workspace-split/rpc_image/: Cargo.toml
tests/code-generation-workspace-split/thrift/: article.thrift  author.thrift  cdn.thrift  common.thrift  image.thrift
volo/: CLAUDE.md  Cargo.toml  README.md
volo-build/: CLAUDE.md  Cargo.toml  README.md
volo-build/src/: config_builder.rs  grpc_backend.rs  lib.rs  model.rs  thrift_backend.rs  util.rs  workspace.rs
volo-build/src/legacy/: config_builder.rs  mod.rs  model.rs  util.rs  workspace.rs
volo-cli/: CLAUDE.md  Cargo.toml  README.md
volo-cli/src/: command.rs  context.rs  http.rs  init.rs  lib.rs  migrate.rs  model.rs
volo-cli/src/idl/: add.rs  mod.rs  update.rs
volo-cli/src/repo/: add.rs  mod.rs  update.rs
volo-grpc/: CLAUDE.md  Cargo.toml  README.md
volo-grpc/src/: body.rs  cfg.rs  codegen.rs  context.rs  lib.rs  message.rs  request.rs  response.rs  status.rs  timer.rs  tracing.rs
volo-grpc/src/client/: callopt.rs  dns.rs  meta.rs  mod.rs
volo-grpc/src/codec/: compression.rs  decode.rs  encode.rs  mod.rs
volo-grpc/src/layer/: cross_origin.rs  grpc_timeout.rs  grpc_web.rs  mod.rs  tracing.rs  user_agent.rs
volo-grpc/src/metadata/: encoding.rs  key.rs  map.rs  mod.rs  value.rs
volo-grpc/src/server/: incoming.rs  meta.rs  mod.rs  router.rs  service.rs
volo-grpc/src/transport/: client.rs  connect.rs  mod.rs  request_extension.rs  tls.rs
volo-http/: CLAUDE.md  Cargo.toml  README.md
volo-http/src/: body.rs  context.rs  cookie.rs  dispatch.rs  extension.rs  extract.rs  handler.rs  json.rs  layer.rs  lib.rs  macros.rs  middleware.rs  param.rs  request.rs  response.rs  route.rs  server.rs  service_fn.rs  tracing.rs
volo-http/src/client/: callopt.rs  cookie.rs  dns.rs  dns_discover.rs  layer.rs  loadbalance.rs  meta.rs  mod.rs  request_builder.rs  sse.rs  target.rs  test_helpers.rs  transport.rs  utils.rs
volo-http/src/context/: client.rs  mod.rs  server.rs  stat.rs
volo-http/src/error/: client.rs  mod.rs  server.rs
volo-http/src/extension/: mod.rs  server.rs
volo-http/src/json/: mod.rs  server.rs
volo-http/src/response/: into_response.rs  mod.rs
volo-http/src/server/: extract.rs  handler.rs  into_response.rs  layer.rs  middleware.rs  mod.rs  panic_handler.rs  param.rs  protocol.rs  route.rs  span_provider.rs  test_helpers.rs
volo-http/src/utils/: consts.rs  cookie.rs  extension.rs  json.rs  lazy.rs  macros.rs  mod.rs  test_helpers.rs
volo-macros/: CLAUDE.md  Cargo.toml
volo-macros/src/: lib.rs
volo-thrift/: CLAUDE.md  Cargo.toml  README.md
volo-thrift/src/: context.rs  error.rs  lib.rs  message.rs  message_wrapper.rs  server.rs  tags.rs  tracing.rs
volo-thrift/src/client/: callopt.rs  mod.rs
volo-thrift/src/codec/: framed.rs  mesh_header.rs  mod.rs  tt_header.rs
volo-thrift/src/protocol/: mod.rs
volo-thrift/src/server/: mod.rs  panic_handler.rs  router.rs
volo-thrift/src/transport/: incoming.rs  mod.rs  server.rs
volo/src/: cfg.rs  client.rs  context.rs  hack.rs  lib.rs  macros.rs
volo/src/catch_panic/: mod.rs
volo/src/discovery/: mod.rs  nacos.rs
volo/src/hotrestart/: mod.rs
volo/src/loadbalance/: adaptive.rs  consistent_hash.rs  error.rs  layer.rs  least_conn.rs  macros.rs  mod.rs  p2c.rs  random.rs  response_time_weighted.rs  round_robin.rs
volo/src/net/: conn.rs  dial.rs  ext.rs  http.rs  incoming.rs  mod.rs  probe.rs  ready.rs  shm.rs  shmipc_fallback.rs
volo/src/util/: buf_reader.rs  mod.rs  server_remote_error.rs
(+219 files in other folders)
