[workspace]
members = [
  "volo",
  "volo-build",
  "volo-cli",
  "volo-grpc",
  "volo-macros",
  "volo-thrift",

  "examples",
  "examples/volo-gen",
]
resolver = "2"

[workspace.package]
authors = ["Volo Team <volo@cloudwego.io>"]
edition = "2021"
homepage = "https://www.cloudwego.io/docs/volo/"
repository = "https://github.com/cloudwego/volo"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# pilota = "0.4"
# pilota-build = "0.4"
# pilota-thrift-parser = "0.4"
pilota = { git = "https://github.com/cloudwego/pilota", branch = "main" }
pilota-build = { git = "https://github.com/cloudwego/pilota", branch = "main" }
pilota-thrift-parser = { git = "https://github.com/cloudwego/pilota", branch = "main" }

motore = "0.3"

metainfo = "0.7"

anyhow = "1"
async-broadcast = "0.5"
async-stream = "0.3"
async-trait = "0.1"
base64 = "0.13"
bytes = "1"
clap = "4"
colored = "2"
dashmap = "5"
dirs = "4"
faststr = "0.2"
futures = "0.3"
futures-util = "0.3"
flate2 = "1"
fxhash = "0.2"
h2 = "0.3"
heck = "0.4"
hex = "0.4"
http = "0.2"
http-body = "0.4"
hyper = "0.14"
hyper-timeout = "0.4"
itertools = "0"
lazy_static = "1"
linkedbytes = "0.1"
linked-hash-map = "0.5"
log = "0.4"
matchit = "0.7"
nom = "7"
normpath = "1"
num_enum = "0.5"
once_cell = "1"
parking_lot = "0.12"
paste = "1"
pathdiff = "0.2"
percent-encoding = "2"
pin-project = "1"
pretty_env_logger = "0.4"
proc-macro2 = "1"
quote = "1"
rand = "0.8"
regex = "1"
run_script = "0.10"
same-file = "1"
serde = "1"
serde_yaml = "0.9"
socket2 = "0.4"
syn = "1"
tempfile = "3"
thiserror = "1"
tokio = "1"
tokio-stream = "0.1"
tokio-util = "0.7"
tower = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
update-informer = "0.6"
url_path = "0.1"
walkdir = "2"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'unwind'
incremental = false
overflow-checks = false
