[workspace]
members = [
  "volo",
  "volo-build",
  "volo-cli",
  "volo-grpc",
  "volo-http",
  "volo-macros",
  "volo-thrift",

  "examples",
  "examples/volo-gen",
]
resolver = "2"

[workspace.package]
authors = ["Volo Team <volo@cloudwego.io>"]
edition = "2021"
homepage = "https://www.cloudwego.io/docs/volo/"
repository = "https://github.com/cloudwego/volo"
license = "MIT OR Apache-2.0"
rust-version = "1.77.0"

[workspace.dependencies]
pilota = "0.11"
pilota-build = "0.11"
pilota-thrift-parser = "0.11"
# pilota = { git = "https://github.com/cloudwego/pilota", branch = "main" }
# pilota-build = { git = "https://github.com/cloudwego/pilota", branch = "main" }
# pilota-thrift-parser = { git = "https://github.com/cloudwego/pilota", branch = "main" }

motore = "0.4"
# motore = { git = "https://github.com/cloudwego/motore", branch = "main" }

metainfo = "0.7"

ahash = "0.8"
anyhow = "1"
async-broadcast = "0.7"
async-stream = "0.3"
base64 = "0.22"
bytes = "1"
chrono = { version = "0.4", default-features = false, features = [
  "std",
  "alloc",
  "clock",
] }
clap = "4"
colored = "2"
cookie = "0.18"
dashmap = "5"
dirs = "5"
faststr = "0.2"
futures = "0.3"
futures-util = "0.3"
flate2 = "1"
git2 = { version = "0.18", default-features = false }
h2 = "0.4"
heck = "0.5"
hex = "0.4"
hickory-resolver = "0.24"
http = "1"
http-body = "1"
http-body-util = "0.1"
hyper = "1"
hyper-timeout = "0.5"
hyper-util = "0.1"
itertools = "0"
itoa = "1"
lazy_static = "1"
libc = "0.2"
linkedbytes = "0.1"
linked-hash-map = "0.5"
log = "0.4"
matchit = "0.8"
mime = "0.3"
mockall = "0.12"
mockall_double = "0.3"
mur3 = "0.1"
nix = "0.28"
nom = "7"
normpath = "1"
num_enum = "0.7"
once_cell = "1"
parking_lot = "0.12"
paste = "1"
pathdiff = "0.2"
percent-encoding = "2"
pin-project = "1"
pretty_env_logger = "0.5"
proc-macro2 = "1"
quote = "1"
rand = "0.8"
regex = "1"
run_script = "0.10"
rustc-hash = "1"
same-file = "1"
scopeguard = "1"
serde = "1"
serde_json = "1"
serde_urlencoded = "0.7"
serde_yaml = "0.9"
simdutf8 = "0.1"
socket2 = "0.5"
sonic-rs = "0.3"
syn = "2"
tempfile = "3"
thiserror = "1"
tokio = "1"
tokio-stream = "0.1"
tokio-util = "0.7"
tower = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
update-informer = "1"
url_path = "0.1"
walkdir = "2"

# Optional dependencies
rustls = "0.22"
rustls-pemfile = "2"
rustls-pki-types = "1"
webpki-roots = "0.26"

tokio-rustls = "0.25"
native-tls = "0.2"
tokio-native-tls = "0.3"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'unwind'
incremental = false
overflow-checks = false
