[workspace]
members = [
  "volo",
  "volo-build",
  "volo-cli",
  "volo-grpc",
  "volo-http",
  "volo-macros",
  "volo-thrift",

  "examples",
  "examples/volo-gen",
  "benchmark",
  "tests/code-generation",
]
resolver = "3"

[workspace.package]
authors = ["Volo Team <volo@cloudwego.io>"]
edition = "2024"
homepage = "https://www.cloudwego.io/docs/volo/"
repository = "https://github.com/cloudwego/volo"
license = "MIT OR Apache-2.0"
rust-version = "1.85.0"

[workspace.dependencies]
pilota = "0.13"
pilota-build = "0.13"
pilota-thrift-parser = "0.13"
pilota-thrift-reflect = "0.2"
pilota-thrift-fieldmask = "0.2"
motore = "0.4.1"
metainfo = "0.7.14"

ahash = "0.8"
anyhow = "1"
arc-swap = "1"
async-broadcast = "0.7"
async-stream = "0.3"
base64 = "0.22"
bytes = "1"
chrono = { version = "0.4", default-features = false, features = [
  "std",
  "clock",
] }
clap = "4"
colored = "3"
cookie = "0.18"
cookie_store = "0.22"
dashmap = "6"
dirs = "6"
faststr = { version = "0.2.21", features = ["serde"] }
futures = "0.3"
futures-util = "0.3"
flate2 = "1"
git2 = { version = "0.20", default-features = false }
governor = "0.10"
h2 = "0.4"
heck = "0.5"
hex = "0.4"
hickory-resolver = "0.25"
http = "1"
http-body = "1"
http-body-util = "0.1"
hyper = "1.6"
hyper-timeout = "0.5"
hyper-util = "0.1.11"
ipnet = "2"
itertools = "0.14"
itoa = "1"
libc = "0.2"
linkedbytes = "0.1.9"
linked-hash-map = "0.5"
log = "0.4"
matchit = "0.9"
memchr = "2"
mime = "0.3"
mime_guess = { version = "2", default-features = false }
mockall = "0.14"
mockall_double = "0.3"
multer = "3"
mur3 = "0.1"
nix = "0.30"
normpath = "1"
num_enum = "0.7"
once_cell = "1"
parking_lot = "0.12"
paste = "1"
pathdiff = "0.2"
percent-encoding = "2"
pin-project = "1"
pretty_env_logger = "0.5"
proc-macro2 = "1"
quote = "1"
rand = "0.9"
regex = "1"
reqwest = "0.12"
run_script = "0.11"
rustc-hash = { version = "2", features = ["rand"] }
same-file = "1"
scopeguard = "1"
serde = "1"
serde_json = "1"
serde_urlencoded = "0.7"
serde_yaml = "0.9"
simdutf8 = "0.1"
socket2 = "0.6"
sonic-rs = "0.5"
syn = "2"
sysinfo = "0.37"
tempfile = "3"
thiserror = "2"
tokio = "1"
tokio-stream = "0.1"
tokio-test = "0.4"
tokio-util = "0.7"
tonic = "0.14"
tonic-web = "0.14"
tower = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"
update-informer = "1"
url = "2"
url_path = "0.1"
walkdir = "2"
zstd = "0.13.3"

# Optional dependencies
rustls = { version = "0.23", default-features = false, features = [
  "std",
  "tls12",
] }
rustls-pemfile = "2"
rustls-pki-types = "1"
webpki-roots = "1"

tokio-rustls = "0.26"
native-tls = "0.2"
tokio-native-tls = "0.3"

tungstenite = "0.28"
tokio-tungstenite = "0.28"

shmipc = "0.1"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'unwind'
incremental = false
overflow-checks = false

# [patch.crates-io]
# pilota = { git = "https://github.com/cloudwego/pilota.git", branch = "main" }
# pilota-build = { git = "https://github.com/cloudwego/pilota.git", branch = "main" }
# pilota-thrift-parser = { git = "https://github.com/cloudwego/pilota.git", branch = "main" }
# pilota-thrift-reflect = { git = "https://github.com/cloudwego/pilota.git", branch = "main" }
# pilota-thrift-fieldmask = { git = "https://github.com/cloudwego/pilota.git", branch = "main" }
# motore = { git = "https://github.com/cloudwego/motore.git", branch = "main" }
# metainfo = { git = "https://github.com/cloudwego/metainfo.git", branch = "main"}
