[package]
name = "examples"
version = "0.0.0"
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
publish = false

# hello
[[bin]]
name = "hello-grpc-server"
path = "src/hello/grpc_server.rs"
[[bin]]
name = "hello-grpc-client"
path = "src/hello/grpc_client.rs"
[[bin]]
name = "hello-thrift-server"
path = "src/hello/thrift_server.rs"
[[bin]]
name = "hello-thrift-client"
path = "src/hello/thrift_client.rs"

# hello tls
[[bin]]
name = "hello-tls-grpc-server"
path = "src/hello_grpc_tls/grpc_tls_server.rs"
required-features = ["__tls"]
[[bin]]
name = "hello-tls-grpc-client"
path = "src/hello_grpc_tls/grpc_tls_client.rs"
required-features = ["__tls"]

# compression
[[bin]]
name = "compresion-grpc-server"
path = "src/compression/grpc_server.rs"
[[bin]]
name = "compression-grpc-client"
path = "src/compression/grpc_client.rs"

# multiplex
[[bin]]
name = "multiplex-grpc-server"
path = "src/multiplex/grpc_server.rs"
[[bin]]
name = "multiplex-grpc-client"
path = "src/multiplex/grpc_client.rs"
[[bin]]
name = "multiplex-thrift-server"
path = "src/multiplex/thrift_server.rs"
[[bin]]
name = "multiplex-thrift-client"
path = "src/multiplex/thrift_client.rs"

# streaming
[[bin]]
name = "streaming-grpc-server"
path = "src/streaming/grpc_server.rs"
[[bin]]
name = "streaming-grpc-client"
path = "src/streaming/grpc_client.rs"

# loadbalance
[[bin]]
name = "loadbalance-grpc-server"
path = "src/loadbalance/grpc_server.rs"
[[bin]]
name = "loadbalance-grpc-client"
path = "src/loadbalance/grpc_client.rs"

# unknown
[[bin]]
name = "unknown-thrift-server"
path = "src/unknown/thrift_server.rs"
[[bin]]
name = "unknown-thrift-client"
path = "src/unknown/thrift_client.rs"

# http
[[bin]]
name = "example-http-server"
path = "src/http/example-http-server.rs"

[[bin]]
name = "example-http-client"
path = "src/http/example-http-client.rs"

[[bin]]
name = "http-tls-server"
path = "src/http/http-tls-server.rs"
required-features = ["__tls"]

[[bin]]
name = "http-tls-client"
path = "src/http/http-tls-client.rs"
required-features = ["__tls"]

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
bytes.workspace = true
faststr.workspace = true
http.workspace = true
http-body.workspace = true
http-body-util.workspace = true
lazy_static.workspace = true
metainfo.workspace = true
motore.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-stream.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

pilota.workspace = true
volo = { path = "../volo" }
volo-grpc = { path = "../volo-grpc" }
volo-thrift = { path = "../volo-thrift", features = ["multiplex"] }
volo-http = { path = "../volo-http", features = ["default_client", "default_server", "cookie"] }

volo-gen = { path = "./volo-gen" }

[features]
__tls = []
rustls = [
    "__tls",
    "volo/rustls",
    "volo-grpc/rustls",
    "volo-http/rustls",
]
native-tls = [
    "__tls",
    "volo/native-tls",
    "volo-grpc/native-tls",
    "volo-http/native-tls",
]
native-tls-vendored = [
    "__tls",
    "volo/native-tls-vendored",
    "volo-grpc/native-tls-vendored",
    "volo-http/native-tls-vendored",
]
