[package]
name = "examples"
version = "0.0.0"
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
publish = false


# hello
[[bin]]
name = "hello-grpc-server"
path = "src/grpc/hello/server.rs"
[[bin]]
name = "hello-grpc-client"
path = "src/grpc/hello/client.rs"
[[bin]]
name = "hello-thrift-server"
path = "src/thrift/hello/server.rs"
[[bin]]
name = "hello-thrift-server-panic"
path = "src/thrift/hello/server_panic.rs"
[[bin]]
name = "hello-thrift-client"
path = "src/thrift/hello/client.rs"

# hello tls
[[bin]]
name = "hello-tls-grpc-server"
path = "src/grpc/tls/server.rs"
required-features = ["__tls"]
[[bin]]
name = "hello-tls-grpc-client"
path = "src/grpc/tls/client.rs"
required-features = ["__tls"]

# googleapis_beyondcorp_appgateways_v1
[[bin]]
name = "googleapis_beyondcorp_appgateways_v1"
path = "src/grpc/googleapis_beyondcorp_appgateways_v1/client.rs"
required-features = ["__tls"]

# compression
[[bin]]
name = "compression-grpc-server"
path = "src/grpc/compression/server.rs"
[[bin]]
name = "compression-grpc-client"
path = "src/grpc/compression/client.rs"

# multiplex
[[bin]]
name = "multiplex-grpc-server"
path = "src/grpc/multiplex/server.rs"
[[bin]]
name = "multiplex-grpc-client"
path = "src/grpc/multiplex/client.rs"
[[bin]]
name = "multiplex-thrift-server"
path = "src/thrift/multiplex/server.rs"
[[bin]]
name = "multiplex-thrift-client"
path = "src/thrift/multiplex/client.rs"

# streaming
[[bin]]
name = "streaming-grpc-server"
path = "src/grpc/streaming/server.rs"
[[bin]]
name = "streaming-grpc-client"
path = "src/grpc/streaming/client.rs"

# loadbalance
[[bin]]
name = "loadbalance-grpc-server"
path = "src/grpc/loadbalance/server.rs"
[[bin]]
name = "loadbalance-grpc-client"
path = "src/grpc/loadbalance/client.rs"

# unknown
[[bin]]
name = "unknown-thrift-server"
path = "src/thrift/unknown/server.rs"
[[bin]]
name = "unknown-thrift-client"
path = "src/thrift/unknown/client.rs"

# grpc-web
[[bin]]
name = "grpc-web-server"
path = "src/grpc/grpc-web/server.rs"
[[bin]]
name = "grpc-web-client"
path = "src/grpc/grpc-web/client.rs"

# http
[[bin]]
name = "example-http-server"
path = "src/http/example-http-server.rs"

[[bin]]
name = "example-http-client"
path = "src/http/example-http-client.rs"

[[bin]]
name = "http-tls-server"
path = "src/http/http-tls-server.rs"
required-features = ["__tls"]

[[bin]]
name = "http-tls-client"
path = "src/http/http-tls-client.rs"
required-features = ["__tls"]

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
bytes.workspace = true
faststr.workspace = true
futures.workspace = true
http.workspace = true
http-body.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
metainfo.workspace = true
motore.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-stream.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

pilota.workspace = true
volo = { path = "../volo" }
volo-grpc = { path = "../volo-grpc", features = ["grpc-web"] }
volo-thrift = { path = "../volo-thrift", features = ["multiplex"] }
volo-http = { path = "../volo-http", features = [
    "default-client",
    "default-server",
    "cookie",
] }

volo-gen = { path = "./volo-gen" }
url.workspace = true
async-broadcast.workspace = true

[features]
__tls = []
rustls = ["__tls", "volo/rustls", "volo-grpc/rustls", "volo-http/rustls"]
native-tls = [
    "__tls",
    "volo/native-tls",
    "volo-grpc/native-tls",
    "volo-http/native-tls",
]
native-tls-vendored = [
    "__tls",
    "volo/native-tls-vendored",
    "volo-grpc/native-tls-vendored",
    "volo-http/native-tls-vendored",
]
