[package]
name = "examples"
version = "0.0.0"
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
publish = false

# hello
[[bin]]
name = "hello-grpc-server"
path = "src/grpc/hello/server.rs"
[[bin]]
name = "hello-grpc-client"
path = "src/grpc/hello/client.rs"
[[bin]]
name = "hello-thrift-server"
path = "src/thrift/hello/server.rs"
[[bin]]
name = "hello-thrift-server-panic"
path = "src/thrift/hello/server_panic.rs"
[[bin]]
name = "hello-thrift-client"
path = "src/thrift/hello/client.rs"

# hello tls
[[bin]]
name = "hello-tls-grpc-server"
path = "src/grpc/tls/server.rs"
required-features = ["__tls"]
[[bin]]
name = "hello-tls-grpc-client"
path = "src/grpc/tls/client.rs"
required-features = ["__tls"]

# compression
[[bin]]
name = "compression-grpc-server"
path = "src/grpc/compression/server.rs"
[[bin]]
name = "compression-grpc-client"
path = "src/grpc/compression/client.rs"

# multiplex
[[bin]]
name = "multiplex-grpc-server"
path = "src/grpc/multiplex/server.rs"

# load balance example
[[bin]]
name = "loadbalance-example"
path = "src/loadbalance_example.rs"

[[bin]]
name = "multiplex-grpc-client"
path = "src/grpc/multiplex/client.rs"
[[bin]]
name = "multiplex-thrift-server"
path = "src/thrift/multiplex/server.rs"
[[bin]]
name = "multiplex-thrift-client"
path = "src/thrift/multiplex/client.rs"

# streaming
[[bin]]
name = "streaming-grpc-server"
path = "src/grpc/streaming/server.rs"
[[bin]]
name = "streaming-grpc-client"
path = "src/grpc/streaming/client.rs"

# loadbalance
[[bin]]
name = "loadbalance-grpc-server"
path = "src/grpc/loadbalance/server.rs"
[[bin]]
name = "loadbalance-grpc-client"
path = "src/grpc/loadbalance/client.rs"

# unknown
[[bin]]
name = "unknown-thrift-server"
path = "src/thrift/unknown/server.rs"
[[bin]]
name = "unknown-thrift-client"
path = "src/thrift/unknown/client.rs"

#grpc-dns
[[bin]]
name = "grpc-dns-client"
path = "src/grpc/dns/client.rs"
[[bin]]
name = "grpc-dns-server"
path = "src/grpc/dns/server.rs"

#grpc-timeout
[[bin]]
name = "grpc-timeout-client"
path = "src/grpc/timeout/client.rs"
[[bin]]
name = "grpc-timeout-service_a"
path = "src/grpc/timeout/service_a.rs"
[[bin]]
name = "grpc-timeout-service_b"
path = "src/grpc/timeout/service_b.rs"

# grpc-web
[[bin]]
name = "grpc-web-server"
path = "src/grpc/grpc-web/server.rs"
[[bin]]
name = "grpc-web-client"
path = "src/grpc/grpc-web/client.rs"

# http
[[bin]]
name = "example-http-server"
path = "src/http/example-http-server.rs"

[[bin]]
name = "example-http-client"
path = "src/http/example-http-client.rs"

[[bin]]
name = "http-tls-server"
path = "src/http/http-tls-server.rs"
required-features = ["__tls"]

[[bin]]
name = "http-tls-client"
path = "src/http/http-tls-client.rs"
required-features = ["__tls"]

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
bytes.workspace = true
faststr.workspace = true
futures.workspace = true
http.workspace = true
http-body.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
metainfo.workspace = true
motore.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-stream.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
volo = { path = "../volo" }
async-broadcast.workspace = true
pilota.workspace = true
pilota-thrift-fieldmask.workspace = true
pilota-thrift-reflect.workspace = true
volo-grpc = { path = "../volo-grpc", features = ["grpc-web"] }
volo-thrift = { path = "../volo-thrift", features = ["multiplex"] }
volo-http = { path = "../volo-http", features = [
    "client", "server",
    "json", "query", "form", "cookie",
    "http1",
] }

volo-gen = { path = "./volo-gen" }

[features]
tls = ["rustls"]

__tls = []
rustls = ["__tls", "volo/rustls", "volo-grpc/rustls", "volo-http/rustls"]
native-tls = [
    "__tls",
    "volo/native-tls",
    "volo-grpc/native-tls",
    "volo-http/native-tls",
]
native-tls-vendored = [
    "__tls",
    "volo/native-tls-vendored",
    "volo-grpc/native-tls-vendored",
    "volo-http/native-tls-vendored",
]
