[package]
name = "volo-build"
version = "0.5.0"
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
description = "Compile thrift and protobuf idls into rust code at compile-time."
documentation = "https://docs.rs/volo-build"
readme = "README.md"
keywords = ["thrift", "grpc", "protobuf", "volo", "build"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
pilota-build.workspace = true

faststr.workspace = true
anyhow.workspace = true
async-trait.workspace = true
dirs.workspace = true
heck.workspace = true
itertools.workspace = true
lazy_static.workspace = true
nom.workspace = true
normpath.workspace = true
once_cell.workspace = true
paste.workspace = true
pathdiff.workspace = true
proc-macro2.workspace = true
quote.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_yaml.workspace = true
syn = { workspace = true, features = [
  "extra-traits",
  "full",
  "visit",
  "visit-mut",
] }
tempfile.workspace = true
url_path.workspace = true
walkdir.workspace = true
