[package]
name = "volo-build"
version = "0.9.3"
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
description = "Compile thrift and protobuf idls into rust code at compile-time."
documentation = "https://docs.rs/volo-build"
readme = "README.md"
keywords = ["thrift", "grpc", "protobuf", "volo", "build"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
volo = { version = "0.9", path = "../volo" }

pilota-build.workspace = true

ahash.workspace = true
anyhow.workspace = true
dirs.workspace = true
faststr.workspace = true
git2.workspace = true
heck.workspace = true
itertools.workspace = true
lazy_static.workspace = true
mockall.workspace = true
mockall_double.workspace = true
nom.workspace = true
normpath.workspace = true
once_cell.workspace = true
paste.workspace = true
pathdiff.workspace = true
proc-macro2.workspace = true
quote.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_yaml.workspace = true
syn = { workspace = true, features = [
  "extra-traits",
  "full",
  "visit",
  "visit-mut",
] }
tempdir.workspace = true
tempfile.workspace = true
url_path.workspace = true
walkdir.workspace = true
