[package]
name = "volo-cli"
version = "0.3.3"
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
description = """
volo-cli is the command line interface for volo, which provides
the ability to generate default project layout and manage the
idls used.
"""
documentation = "https://docs.rs/volo-cli"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["thrift", "grpc", "protobuf", "volo", "cli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
volo-build = { version = "0.3", path = "../volo-build" }
pilota-thrift-parser.workspace = true

anyhow.workspace = true
clap = { workspace = true, features = ["wrap_help", "derive"] }
colored.workspace = true
heck.workspace = true
itertools.workspace = true
lazy_static.workspace = true
log.workspace = true
normpath.workspace = true
pretty_env_logger.workspace = true
regex.workspace = true
run_script.workspace = true
same-file.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_yaml.workspace = true
update-informer.workspace = true
