[package]
name = "volo-grpc"
version = "0.11.7"
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "gRPC framework implementation of volo."
documentation = "https://docs.rs/volo-grpc"
readme = "README.md"
categories = ["asynchronous", "network-programming", "web-programming"]
keywords = ["async", "rpc", "grpc", "protobuf"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"] # for conditional intra-doc links
all-features = true

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
pilota.workspace = true
volo = { version = "0.11", path = "../volo" }
motore = { workspace = true, features = ["tower"] }
metainfo.workspace = true
async-broadcast.workspace = true

anyhow.workspace = true
async-stream.workspace = true
base64.workspace = true
bytes.workspace = true
chrono.workspace = true
rustc-hash.workspace = true
faststr.workspace = true
futures-util.workspace = true
futures.workspace = true
h2.workspace = true
hex.workspace = true
hickory-resolver.workspace = true
http.workspace = true
http-body.workspace = true
http-body-util.workspace = true
hyper = { workspace = true, features = ["client", "server", "http2"] }
hyper-timeout.workspace = true
hyper-util = { workspace = true, features = [
  "tokio",
  "client",
  "client-legacy",
  "server",
  "http2",
] }
linkedbytes.workspace = true
matchit.workspace = true
paste.workspace = true
percent-encoding.workspace = true
pin-project.workspace = true
tokio = { workspace = true, features = ["time", "rt", "net", "sync", "signal"] }
tokio-stream.workspace = true
tokio-util = { workspace = true, features = ["codec", "compat"] }
tonic = { workspace = true, optional = true }
flate2 = { workspace = true, optional = true }
tonic-web = { workspace = true, optional = true }
tower = { workspace = true, features = [
  "buffer",
  "limit",
  "make",
  "util",
  "discover",
  "balance",
] }
tracing.workspace = true

tokio-rustls = { workspace = true, optional = true }
tokio-native-tls = { workspace = true, optional = true }
zstd = { workspace = true, optional = true }

[dev-dependencies]
tracing-subscriber.workspace = true

[features]
default = ["gzip", "zlib"]
gzip = ["compress"]
zlib = ["compress"]
zstd = ["dep:zstd", "compress"]
compress = ["dep:flate2"]

__tls = []
rustls = ["__tls", "dep:tokio-rustls", "volo/rustls"]
native-tls = ["__tls", "dep:tokio-native-tls", "volo/native-tls"]
native-tls-vendored = ["native-tls", "volo/native-tls-vendored"]

grpc-web = ["dep:tonic", "dep:tonic-web"]
